Learned on Mon(9.26)

--- a/면접준비.md
+++ b/면접준비.md
@@ -8,12 +8,13 @@
 
 #### 마무리
 
-- 끈질김을 무기로 포기하지 않고 긍정적인 사고를 유지하며, 다양한 경험을 개발 과정 중 커뮤니케이션 능력, 해당 업무에 대한 이해도 증대의 자양분으로 이끌어 낼 수 있습니다. 유연한 사고로 창의적이고, 감각적으로 직면한 문제를 해결할 수 있으며, 성실하고 책임감있는 자세로 부단히 공부하여 더욱 성장할 수 있습니다.
+- 사회적인 나이는 늦지만/ 제생각엔 시작하기 늦지 않은 나이다. 제생각 끈질김을 무기로 포기하지 않고 긍정적인 사고를 유지하며, 다양한 경험을 개발 과정 중 커뮤니케이션 능력, 해당 업무에 대한 이해도 증대의 자양분으로 이끌어 낼 수 있습니다. 유연한 사고로 창의적이고, 감각적으로 직면한 문제를 해결할 수 있으며, 성실하고 책임감있는 자세로 부단히 공부하여 더욱 성장할 수 있습니다.
 - 인공지능 챗봇 및 빅데이터 수집, 분석, 검색솔루션 1위 기업
 - 챗봇 : 와이즈 아이챗 -V3, 현명한 앤써니
 - 인공지능 기반 검색 솔루션
 - 서비스 : 챗봇 서비스, 방역 관제 서비스, 데이터 분석 서비스, 온라인 광고 서비스
 - 빅데이터 : 데이터 분석, 텍스트 마이닝, 자동분류, 데이터 수집
+- 국방부, 세무서 등 관공서 가 신뢰를 줌
 
 
 
@@ -25,3 +26,18 @@
 - 본론 : 앞서 말씀드린 경험들을 바탕으로 개발직무에서도 다양한 경험들이 직무 역량 과 부합하는 자양분이 되었다고 생각. 음악은 컴퓨터음악, 즉 프로듀싱 및 작곡 을 함, 프로젝트를 만들고 수정하고, 기획하는 등 개발자의 업무와 매우 흡사한 부분이 많이 있다고 생각. 이 일을 하면서는 제로베이스에서 창작을 해야하기에 문제를 직면했을 때 좌절하지 않고, 끈질기게 업무를 진행 할 수 있는 끈질김과 긍정적성향을 얻을 수 있었습니다. 창업을 했을때는 다양한 업무를 직접 총괄하여 진행하며, 전반적인 비지니스의 이해와 12시간이상씩 주 6회이상씩 일하며 얻은 성실함과 꾸준함과같은 역량을 얻을 수 있었습니다. 그 성실함과 책임감을 바탕으로 부단히 공부하고 매일매일 기록합니다.
 - 결론 : 자바를 기반으로 스프링 부트, 네이버 클라우드 플랫폼, CentOS, CLOVA ChatBot과 같은 환경 및 기술들을 활용하여 프로젝트를 진행해본 경험이 있으며,  기본적으로 HTML,CSS, Javascipt, SQL 등 다양한 언어들을 사용합니다. 진취적으로 목표의식을 갖고 빠르게 성장하는 개발자 김민식 입니다.
 
+
+
+- 리멤버 - 경력자 풀, 이력서 오픈, 채용 연계
+
+
+
+- 개인 사업을 하다보니 프로그래밍이 얼마나 영업 이익과관련이 있는지 생각하게 되어 관심
+- 경영을 해봐서 오너쉽이 있다.
+- SASS ,  인공지능 챗봇/ 검색 1위 시도 를 중점 주도적인 성향
+- 우대사항 : 자바, jsp 개발 가능자
+- 아이스 비즈 인포 -
+- 캐치, 크레딧 잡 채용 홈페이지
+- 딥서치 - 주가
+- 더브이씨 - 스타트업 어느단계인지 나옴
+- 로켓펀치 - 거기 팀원들이 누군지 나옴
