Learned on Fri(10.7)

--- a/취업관련 공부.md
+++ b/취업관련 공부.md
@@ -24,6 +24,10 @@
 - 서비스 : 챗봇 서비스, 방역 관제 서비스, 데이터 분석 서비스, 온라인 광고 서비스
 - 빅데이터 : 데이터 분석, 텍스트 마이닝, 자동분류, 데이터 수집
 
+## 메가존 클라우드
 
+- 신입 연봉 3000만원 초반 대
+- 주요 사업 : 클라우드 운영
+- 지원 직무 : 시스템 엔지니어 24/7 장애대응 및 클라우드 운영
 
-
+전공 학점 68/ 3.38
