--- a/면접준비.md
+++ b/면접준비.md
@@ -3,7 +3,7 @@
 ## 자기소개 Keyword
 
 - 서두 : 진취적으로 목표의식을 갖고 빠르게 성장하는 개발자입니다. 끈질김을 무기로 포기하지 않고 긍정적인 사고를 유지하며, 다양한 경험을 개발 과정 중 커뮤니 케이션 능력 해당 업무에 대한 이해도 증대의 자양분으로 이끌어 냅니다. 
-- 본론 : 올 4월 K-Digital Training 과정을 진행하고 교육받았으며, 교육 이외에도 그 이듬달 바로 SQLD시험을 접수하여 교육외 시간에 교육한 내용 및 SQL개발자 시험도 준비하여 6월에 해당 시험을 합격하였습니다. 그 외에도 정보처리기사 또한 빠르게 접수하여 필기에 합격하였고 교육과 시험 외에도 유튜브 강의영상을 시청 등 확실한 모티브를 갖고 열의를 갖고 공부와 개발자 역량 강화에 집중하였습니다.
+- 본론 : 올 4월 K-Digital Training 과정을 진행하고 교육받았으며, 교육 이외에도 그 이듬달 바로 SQLD시험을 접수하여 교육외 시간에도 교육한 내용 정리 및 SQL개발자 시험도 준비하여 6월에 해당 시험을 합격하였습니다. 그 외에도 정보처리기사 또한 빠르게 접수하여 필기에 합격하였고 교육과 시험 외에도 유튜브 강의영상을 시청 등 확실한 목표를 가졌으며, 진취적으로 열의를 갖고 공부와 개발자 역량 강화에 집중하였습니다.
 - 결론 : 분명한 동기, 빠른 성장, 성실하고 책임감 있는 자세로 부단히 공부하고 기록합니다. 유연한 사고로 창의적이고, 감각적으로 직면한 문제를 해결하는 김민식 입니다.
 
 #### 마무리
@@ -22,9 +22,25 @@
 
 -----
 
-- 서두: 인사 및 음악, 외식업 창업 그 외 아르바이트 및 대외활동 등 다수의 다양한 경험 중요시 및 경험 해봄. 그 후 개발자 직무에 관심을 갖게 되어 K-Digital Training 과정을 거쳐 개발자로 성장
-- 본론 : 앞서 말씀드린 경험들을 바탕으로 개발직무에서도 다양한 경험들이 직무 역량 과 부합하는 자양분이 되었다고 생각. 음악은 컴퓨터음악, 즉 프로듀싱 및 작곡 을 함, 프로젝트를 만들고 수정하고, 기획하는 등 개발자의 업무와 매우 흡사한 부분이 많이 있다고 생각. 이 일을 하면서는 제로베이스에서 창작을 해야하기에 문제를 직면했을 때 좌절하지 않고, 끈질기게 업무를 진행 할 수 있는 끈질김과 긍정적성향을 얻을 수 있었습니다. 창업을 했을때는 다양한 업무를 직접 총괄하여 진행하며, 전반적인 비지니스의 이해와 12시간이상씩 주 6회이상씩 일하며 얻은 성실함과 꾸준함과같은 역량을 얻을 수 있었습니다. 그 성실함과 책임감을 바탕으로 부단히 공부하고 매일매일 기록합니다.
-- 결론 : 자바를 기반으로 스프링 부트, 네이버 클라우드 플랫폼, CentOS, CLOVA ChatBot과 같은 환경 및 기술들을 활용하여 프로젝트를 진행해본 경험이 있으며,  기본적으로 HTML,CSS, Javascipt, SQL 등 다양한 언어들을 사용합니다. 진취적으로 목표의식을 갖고 빠르게 성장하는 개발자 김민식 입니다.
+- 서두: 인사 및 음악, 외식업 창업 그 외 아르바이트 및 대외활동 등 다수의 다양한 경험 중요시 및 경험 해봄. 그 후 IT 직무에 관심을 갖게 되어 K-Digital Training 과정을 거쳐 엔지니어로 성장
+- 본론 : 앞서 말씀드린 경험들을 바탕으로 엔지니어직무에서도 다양한 경험들이 직무 역량 과 부합하는 자양분이 되었다고 생각. 음악은 컴퓨터음악, 즉 프로듀싱 및 작곡 을 함, 프로젝트를 만들고 수정하고, 기획하는 등 IT업계 업무와 매우 흡사한 부분이 많이 있다고 생각. 이 일을 하면서는 제로베이스에서 창작을 해야하기에 문제를 직면했을 때 좌절하지 않고, 끈질기게 업무를 진행 할 수 있는 끈질김과 긍정적성향을 얻을 수 있었습니다. 창업을 했을때는 다양한 업무를 직접 총괄하여 진행하며, 전반적인 비지니스의 이해와 12시간이상씩 주 6회이상씩 일하며 얻은 성실함과 꾸준함과같은 역량을 얻을 수 있었습니다. 그 성실함과 책임감을 바탕으로 부단히 공부하고 매일매일 기록합니다.
+- 결론 : 자바를 기반으로 스프링 부트, 네이버 클라우드 플랫폼, CentOS, CLOVA ChatBot과 같은 환경 및 기술들을 활용하여 프로젝트를 진행해본 경험이 있으며,  기본적으로 HTML,CSS, Javascipt, SQL 등 다양한 언어들을 사용합니다. 진취적으로 목표의식을 갖고 빠르게 성장하는 엔지니어 김민식 입니다.
+
+\- 20 : FTP(data) :파일 전송 프로토콜
+
+\- 21 : FTP(제어)
+
+\- 22 : SSH : SSH 파일 전송 프로토콜, 보안 파일 전송 프로토콜
+
+\- 23 : 텔넷
+
+\- 53 : DNS
+
+\- 80 : 월드 와이드 웹 HTTP
+
+\- 119 : NNTP
+
+\- 443 : TLS/SSL 방식의 HTTP
 
 
 
