Learned on Tue(10.19)

--- a/면접준비.md
+++ b/면접준비.md
@@ -1,5 +1,20 @@
 # 면접 준비
 
+## 개인정보 정리
+
+- 군대 복무기간
+  - 2013.05.28~2015.02.27
+
+- 자격증
+
+  - 
+
+- | SQLD           | 개발자 | SQLD-045004844 | 2022.06.24 | 2022.06.24 | ~2024.06.24 | 한국데이터산업진흥원장 |
+  | -------------- | ------ | -------------- | ---------- | ---------- | ----------- | ---------------------- |
+  | 워드프로세서   | X      | 22-I9-004981   | 2022.04.15 | 2022.04.15 | .           | 대한상공회의소         |
+  | 컴퓨터활용능력 | 2급    | 22-K9-038519   | 2022.04.15 | 2022.04.15 | .           | 대한상공회의소         |
+  | 양식조리기능사 | 기능사 | 21808050528C   | 2021.05.13 | 2021.05.13 | .           | 한국산업인력공단       |
+
 ## 자기소개 Keyword
 
 - 서두 : 진취적으로 목표의식을 갖고 빠르게 성장하는 개발자입니다. 끈질김을 무기로 포기하지 않고 긍정적인 사고를 유지하며, 다양한 경험을 개발 과정 중 커뮤니 케이션 능력 해당 업무에 대한 이해도 증대의 자양분으로 이끌어 냅니다. 
