learned on mon(11.21)

--- a/OJT/22.11.18 Spring Board Day 01.md
+++ b/OJT/22.11.18 Spring Board Day 01.md
@@ -1,6 +1,66 @@
 # Spring Board Day 01
 
- 
+ Spring Board Day 01
+
+## Spring 게시판 만들기
+
+### 1. ERD CLOUD로 테이블, 컬럼 등 구성하기
+
+![152521](C:\Users\김민식\Documents\TIL\OJT\assets\152521.png)
+
+### 2. MriaDB 통해 sql 쿼리문 작성 (테이블 생성, 데이터 입력 등)
+
+```jsx
+-- DDL
+
+DROP DATABASE IF EXISTS BOARD;
+CREATE DATABASE BOARD;
+USE BOARD;
+
+DROP TABLE IF EXISTS BOARD;
+DROP TABLE IF EXISTS COMMENT;
+
+CREATE TABLE BOARD(
+	BOARD_NMBR INT,
+	TITLE VARCHAR(100),
+	WRITER VARCHAR(100),
+	TEXT VARCHAR(1000),
+	RGST_DATE DATETIME,
+	ABLECOMMENT BOOLEAN,
+	PASSWORD VARCHAR(100)
+);
+
+ALTER TABLE BOARD ADD CONSTRAINT PRIMARY KEY(BOARD_NMBR);
+ALTER TABLE BOARD MODIFY BOARD_NMBR INT AUTO_INCREMENT;
+ALTER TABLE BOARD AUTO_INCREMENT = 0;
+
+CREATE TABLE COMMENT(
+	COMMENT_NMBR INT,
+	BOARD_NMBR INT,
+	COMMENT_TEXT VARCHAR(1000),
+	COMMENT_WRITER VARCHAR(100),
+	RGST_DATE DATETIME,
+	COMMENT_PASSOWORD VARCHAR(100)
+	);
+
+ALTER TABLE COMMENT ADD CONSTRAINT PRIMARY KEY(COMMENT_NMBR);
+ALTER TABLE COMMENT MODIFY COMMENT_NMBR INT AUTO_INCREMENT;
+ALTER TABLE COMMENT AUTO_INCREMENT = 0;
+ALTER TABLE COMMENT ADD CONSTRAINT FOREIGN KEY(BOARD_NMBR) REFERENCES BOARD(BOARD_NMBR);
+
+-- DML
+
+INSERT INTO BOARD VALUES(NULL, '제목입니다22222', '작성자','내용입니다' ,NOW(), TRUE, '!ABCD12412');
+
+SELECT * FROM BOARD;
+
+SELECT ROW_NUMBER() OVER (ORDER BY BOARD_NMBR DESC) AS NUM,PASSWORD FROM BOARD;
+```
+
+### 3. 프로젝트 구조 파악 및 화면 간단히 구성
+
+- 부트스트랩 활용하여 화면 구성
+- ![12212](C:\Users\김민식\Documents\TIL\OJT\assets\12212.png)
 
 질문사항
 
