--- a/OJT/22.11.24 Spring Board Day 05.md
+++ b/OJT/22.11.24 Spring Board Day 05.md
@@ -1,28 +1,39 @@
-# Spring Board Day 04
+# Spring Board Day 05
 
- Spring Board Day 04
+ Spring Board Day 05
 
 ## Spring 게시판 만들기
 
 ### 5. 게시판 목록 페이징
 
-![paging](C:\Users\김민식\Documents\TIL\OJT\assets\paging.png)
+![main](C:\Users\김민식\Documents\TIL\OJT\assets\main.png)
 
 - AJAX로 검색후, 검색 전 페이징 구현
+- 조회수 조회
+- 댓글수 제목 뒤에 ()로 표시
 
 ### 7. 게시물 상세
 
 ![bdetail](C:\Users\김민식\Documents\TIL\OJT\assets\bdetail.png)
 
-- 목록에서 게시물 클릭시, 게시물 상세 페이지
-- 게시물 상세 페이지에서는 수정 불가
-- 해당 게시물 댓글 구현
-  - 게시물이 댓글 금지 게시물이라면 텍스트로 표시
-  - 댓글 데이터 테이블로 구성
-- 댓글 작성 가능
-  - 비밀번호 유효성 검사
-    - 숫자 4자리 이상 (숫자만 따로 빼서 길이 체크)
-    - 대,소,특수문자,숫자 모두 체크 (정규식)
+- 엔터키로 댓글 추가 가능 (조건이 맞았을 시)
+- 삭제버튼 누를시 팝업 창 생성
+
+### 8. 댓글 삭제 (팝업)
+
+![popup](C:\Users\김민식\Documents\TIL\OJT\assets\popup.png)
+
+- 비밀번호 틀릴 시 Ajax로 유효성 검사
+- 검사후 confirm으로 삭제한번더 확인 후 삭제 진행
+- 통과 하면 데이터 삭제, 부모창 reload 후 window close()
+- 취소버튼 누르면 window close()
+
+### 9. 게시물 삭제 (모달)
+
+![delete](C:\Users\김민식\Documents\TIL\OJT\assets\delete.png)
+
+- 삭제버튼을 누르면 게시물 삭제 모달페이지 출력
+- 댓글이 없는 게시물만 <c:if>로 삭제모달 접근 가능, 댓글이 있는 게시물은 alert로 삭제 불가 표시
 
 질문사항
 
