Learned on Wed(12.21)

--- a/OJT/22.12.14 Spring Board Advenced Day05.md
+++ b/OJT/22.12.14 Spring Board Advenced Day05.md
@@ -213,4 +213,5 @@ public class ParameterAop {
 3. 웹서비스에서 비용, 혹은 프로그램을 무겁게 하는 최대 원인 (EX. 데이터, 코드양, SQL 쿼리양 등등) _ 경험 無
    1. 해결하는 파트 우선 순서 (처리할 수 있는 경우의 수 多)
       1. EX.  최대한 SQL선에서 정리 -> 서버 -> 프론트 || controller -> 프론트 -> sql 등
+      1. With Recursive, include (MYBatis)
 4. 이미지 파일 업로드 바로 인식 안되는 해결방법
