--- a/OJT/22.12.15 Spring Board Advenced Day06.md
+++ b/OJT/22.12.15 Spring Board Advenced Day06.md
@@ -89,11 +89,11 @@ navigator.geolocation.getCurrentPosition(onGeoOk, onGeoError);
 1) ERD 관련
    1) 동아리가 10개 100개 그 이상 추가 될경우를 대비해 구성했을시 적합성
    2) 게시판에 동아리 번호 적합성
-2) 세션을 체크하려면 컨트롤러의 해당 모든 단에 Httpsession을 추가해야 하는지 혹은 다른 방법
+2) 세션을 체크하려면 컨트롤러의 해당 모든 단에 Httpsession을 추가해야 하는지 혹은 다른 방법 인터셉터
 
-3. 웹서비스에서 비용, 혹은 프로그램을 무겁게 하는 최대 원인 (EX. 데이터, 코드양, SQL 쿼리양 등등) _ 경험 無
+3. 웹서비스에서 비용, 혹은 프로그램을 무겁게 하는 최대 원인 (EX. 데이터, 코드양, SQL 쿼리양 등등) 
    1. 해결하는 파트 우선 순서 (처리할 수 있는 경우의 수 多)
       1. EX.  최대한 SQL선에서 정리 -> 서버 -> 프론트 || controller -> 프론트 -> sql 등
 4. 이미지 파일 업로드 바로 인식 안되는 해결방법
 
-5. 날씨 현재 위치 name 오류
+5. 날씨 현재 위치 name 오류 - 추측) OpenWeatherAPI 오류
