Learned on Fri(22.12.23)

--- a/OJT/22.12.15 Spring Board Advenced Day06.md
+++ b/OJT/22.12.15 Spring Board Advenced Day06.md
@@ -4,7 +4,7 @@
 
 ### 12. dark모드 만들기 (추가 사항)
 
-![darkmod](C:\Users\김민식\Documents\TIL\OJT\assets\darkmod.png)
+![darkmod](assets\darkmod.png)
 
 - Nav바의 Night / Day 버튼 누를시 변환하면서 다크모드로 변경
 
